
'''Improved'''
* Updated TCPDF to version 4.0.009. (stranger)
* Formfield for OpenID, if OID is inactive users won't see it's fields. (stranger)
* Google Analytics is now being handled directly (without smartys). (stranger)
* some enhancements to password secureness. pass can not equal username, or uname in reverse or even contain username. (vaughan)

'''Changed'''
* after upgrade is done you'll get back to index to see if upgrade was successful. (stranger)
* moved protector.php to extras. (stranger)
* xoops.css to icms.css. (stranger)
* xoops_rtl.css to icms_rtl.css. (stranger)
* xoops_rtl.js to icms_rtl.js. (stranger)
* Removed google_analytics smartys from themes. (stranger)

'''Fixed'''
* Could not upload avatar. (real_therplima/stranger)
* Fixed the isssue of password meter for RTL languages. (stranger)
* Fixed the isssues of installation for RTL languages. (stranger)
* Issue with PDF generator. (stranger)
* HTML Purifier is now properly using the trust path to create its cache data (Vaughan/malanciault)
* The installer was not properly creating the password hash of the administrator (Vaughan/real_therplima/malanciault)
* #1871202 (was not completely fixed) - Avatar and Karma (Fixed). (stranger)
* Issue with new hash generator, when replacing new core files. (stranger)
* Security Vulnerabilty (http://www.securityfocus.com/bid/30330) in modules/system/admin.php (Vaughan/Rodrigo/Wtravel)
* typo in htaccess.txt for error documents in error 500.. errpr.php should be error.php (Wizanda)
* #2037875 - theme block did not display theme names.
* #2037881 - SQL error when checking for protector module installation in Control Panel home.
* #1990271 - database charset can be set to ucs2 without generating any errors.
* #2038160 - custom tag admin functions now work properly.
* #2038233 - removed OpenID requirement when adding or editing users in admin area.

===2008-07-02 : 1.1 Alpha 2===

'''Added'''