@@ -11,6 +11,9 @@
   <h4><{$message}></h4>
   <p><{$lang_ifnotreload}></p>
 </div>
+<div id="icms-footer">
+		<{$xoops_footer}>
+</div>
 <{if $xoops_logdump != ''}><div><{$xoops_logdump}></div><{/if}>
 </body>
 </html>
