@@ -21,7 +21,7 @@
 	    <div id="icms-headerbanner"><{$xoops_banner}></div>
 		<div id="icms-globalnav"></div>
     </div>  <!-- End header -->
-  
+
 <!-- Start Main Content Area -->
 <div id="icms-canvas-content">
 <div id="icms-redirect">
@@ -32,9 +32,8 @@
 </div>
 <!-- Start footer -->
 <div id="icms-footer">
-<a href="http://www.impresscms.org/" title=""><img src="<{$xoops_imageurl}>img/poweredby.gif" alt="impressCMS" /></a>
-</div>
-<!-- end Footer -->
+	<{$xoops_footer}>
+</div><!-- end Footer -->
 </div>
 </body>
 </html>
