@@ -17,9 +17,9 @@
     <div id="icms-header">
 	    <div id="icms-headerlogo"><a href="<{xoAppUrl /}>" title=""><img src="<{xoImgUrl img/logo.png}>" alt="<{$xoops_sitename}>" /></a></div>
 	    <div id="icms-headerbanner"><{$xoops_banner}></div>
-    </div>  
+    </div>
   <!-- End header -->
-  
+
 <!-- Start Main Content Area -->
 <div id="icms-canvas-content">
 <div id="icms-redirect"><{$lang_siteclosemsg}></div>
@@ -37,9 +37,10 @@
 	 		</form>
 	 	</div>
 	</div>
-</div><!-- Start footer -->
+</div>
+<!-- Start footer -->
 <div id="icms-footer">
-<a href="http://www.impresscms.org/" title=""><img src="<{xoImgUrl img/poweredby.gif}>" alt="ImpressCMS" /></a>
+	<{$xoops_footer}>
 </div>
 <!-- end Footer -->
 </div>
