@@ -7,13 +7,13 @@
 	*}>
 	<{assign var=theme_top_order value=lrc}>
 	<{assign var=theme_bottom_order value=lcr}>
-	
+
 <!-- Theme name -->
 	<{assign var=theme_name value=$xoTheme->folderName}>
 
 <!-- Title and meta -->
 	<title><{if $xoops_pagetitle !=''}><{$xoops_pagetitle}> : <{/if}><{$xoops_sitename}></title>
-	<meta http-equiv="content-type" content="text/html; charset=<{$xoops_charset}>" />	
+	<meta http-equiv="content-type" content="text/html; charset=<{$xoops_charset}>" />
 	<{$xoops_google_meta}>
 	<meta name="robots" content="<{$xoops_meta_robots}>" />
 	<meta name="keywords" content="<{$xoops_meta_keywords}>" />
@@ -22,14 +22,14 @@
 	<meta name="author" content="<{$xoops_meta_author}>" />
 	<meta name="copyright" content="<{$xoops_meta_copyright}>" />
 	<meta name="generator" content="ImpressCMS" />
-	
+
 <!-- Favicon -->
 	<link rel="shortcut icon" type="image/ico" href="<{xoImgUrl icons/favicon.ico}>" />
 	<link rel="icon" type="image/png" href="<{xoImgUrl icons/icon.png}>" />
-	
+
 <!-- Sheet Css -->
 	<link rel="stylesheet" type="text/css" media="all" title="Style sheet" href="<{xoImgUrl  /style.css}>" />
-	
+
 <!-- Module Header -->
 <{$xoops_module_header}>
 </head>
@@ -102,7 +102,7 @@
 	<!-- Footer -->
 	<div id="icms-footer">
 		<{$xoops_footer}>
-</div>
+	</div>
 </div>
 
 </body>
